AUTOMAKE_OPTIONS=foreign
SUBDIRS=    src/lib/common \
            src/lib/concurrent \
            src/lib/monitor \
            src/lib/net \
            src/lib/system \
            src/test/common \
            src/test/concurrent \
            src/test/monitor \
            src/test/net \
            src/test/system \
            src/app
INCLUDES=-I$(srcdir)/src/include
export INCLUDES
