AUTOMAKE_OPTIONS=foreign
SUBDIRS=    src/lib/common \
            src/lib/concurrent \
            src/lib/date \
            src/lib/json \
            src/lib/log \
            src/lib/monitor \
            src/lib/net \
            src/lib/system \
            src/test/common \
            src/test/concurrent \
            src/test/date \
            src/test/json \
            src/test/log \
            src/test/monitor \
            src/test/net \
            src/test/system \
            src/app
INCLUDES=-I$(srcdir)/src/include
export INCLUDES
