noinst_PROGRAMS=monitor
monitor_SOURCES=sys_monitor.cpp
monitor_LDADD=$(top_srcdir)/src/lib/monitor/libmonitor.a $(top_srcdir)/src/lib/system/libsystem.a $(top_srcdir)/src/lib/libcommon.a
INCLUDES=-I$(top_srcdir)/src/include -I$(top_srcdir)/src/include/system -I$(top_srcdir)/src/include/monitor
#export INCLUDES
