noinst_LIBRARIES=libasionet.a
libasionet_a_SOURCES=NetMessage.cpp Peer.cpp Client.cpp Server.cpp Listener.cpp ServerCenter.cpp 
libasionet_a_CXXFLAGS=-D__LINUX__ -D__STDC_FORMAT_MACROS 
INCLUDES=   -I$(top_srcdir)/src/include/common \
            -I$(top_srcdir)/src/include/concurrent \
            -I$(top_srcdir)/src/include/json \
            -I$(top_srcdir)/src/include/asionet
