noinst_LIBRARIES=libipc.a
libipc_a_SOURCES=IPCHandler.cpp IPCMessage.cpp
INCLUDES=   -I$(top_srcdir)/src/include/ipc \
            -I$(top_srcdir)/src/include/common \
            -I$(top_srcdir)/src/include/concurrent \
            -I$(top_srcdir)/src/include/date \
            -I$(top_srcdir)/src/include/json 

