noinst_LIBRARIES=libsystem.a
libsystem_a_SOURCES=system_info.cpp  system_time.cpp  system_tool.cpp process_time.cpp process_name.cpp
libsystem_a_CXXFLAGS=-D__LINUX__ -D__STDC_FORMAT_MACROS 
INCLUDES=-I$(top_srcdir)/src/include -I$(top_srcdir)/src/include/system -I$(top_srcdir)/src/include/concurrent
