noinst_PROGRAMS=test_date 
test_date_SOURCES=test_date.cpp
test_date_LDADD=  $(top_srcdir)/src/lib/date/libdate.a \
                $(top_srcdir)/src/lib/common/libcommon.a \
                $(top_srcdir)/src/lib/system/libsystem.a
INCLUDES=   -I$(top_srcdir)/src/include/common \
            -I$(top_srcdir)/src/include/system \
            -I$(top_srcdir)/src/include/date 
